# embree3Pathtracing3

./: CMakeLists.txt  Camera.h  Color.h  Film.h  Image.h  Material.h  README.md  Ray.h  Rectangle.h  Renderer.cpp  Renderer.h  Setup.cpp  Setup.h  Triangle.h  main.cpp
embree-3.13.5/: README.md
embree-3.13.5/doc/src/: intro.md
embree-3.13.5/doc/src/api/: RTC_GEOMETRY_TYPE_INSTANCE.md  rtcIntersect1M.md  rtcIntersect1Mp.md  rtcIntersect4.md  rtcIntersectNM.md  rtcIntersectNp.md  rtcOccluded1M.md  rtcOccluded1Mp.md  rtcOccluded4.md  rtcOccludedNM.md  rtcOccludedNp.md  rtcSetGeometryIntersectFunction.md  rtcSetGeometryOccludedFunction.md
embree-3.13.5/man/man3/: RTC_GEOMETRY_TYPE_INSTANCE.3embree3  rtcIntersect1M.3embree3  rtcIntersect1Mp.3embree3  rtcIntersect4.3embree3  rtcIntersectNM.3embree3  rtcIntersectNp.3embree3  rtcOccluded1M.3embree3  rtcOccluded1Mp.3embree3  rtcOccluded4.3embree3  rtcOccludedNM.3embree3  rtcOccludedNp.3embree3  rtcSetGeometryIntersectFunction.3embree3  rtcSetGeometryOccludedFunction.3embree3
embree-3.13.5/tutorials/common/imgui/: README.md
